# Residual-aggregation-global-forecasting

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-tests.yml
appendix/: appendix_a_experimental_details.tex  appendix_b_robustness.tex
data/processed/: README.md  monthly_market_series_sample.csv
data/raw/: README.md
docs/: reproducibility_checklist.md  v1_preregistration_market_structure_archived.md
results/manuscript/coverage_ladder/: comparisons.csv  metadata.json  predictions.csv  summary.csv
results/manuscript/observed_brand_aggregate_placebo/: monthly_results.csv  predictions.csv  seed_results.csv  summary.csv
results/manuscript/placebos_multiseed/: mechanism_summary.md  monthly_results.csv  seed_results.csv  summary.csv
results/manuscript/representation_ablation/: comparisons.json  predictions.csv  summary.csv
results/manuscript/tables/: table_coverage_improvement_intervals.csv  table_main_results.csv  table_placebo_robustness.csv  table_representation_ablation.csv
scripts/: make_figures.py  make_tables.py  prepare_processed_data.py  run_all_experiments.py  run_coverage_ladder.py  run_placebos.py  run_representation_ablation.py
src/residual_aggregation/: __init__.py  config.py  data.py  evaluation.py  experiments.py  features.py  model.py
tests/: test_data_validation.py  test_features_and_evaluation.py
