[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "residual-aggregation-forecasting"
version = "0.1.0"
description = "Reproduction code for residual aggregation under partial market coverage."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ja_gu"}]
dependencies = [
    "python-dateutil>=2.9",
    "numpy==2.3.5",
    "pandas==3.0.1",
    "openpyxl==3.1.5",
    "lightgbm==4.6.0",
    "matplotlib==3.10.3",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
